# vanity-sniper

./: Cargo.toml  tokens.txt
src/: logger.rs  main.rs  utils.rs
