[package]
name = "vanity-sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
clap = { version = "4.3.19", features = ["derive"] }
chrono = "0.4.26"
log = "0.4.19"
colored = "2.0.4"
